--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@angular/platform-browser": "~8.2.0",
         "@angular/platform-browser-dynamic": "~8.2.0",
         "@angular/router": "~8.2.0",
+        "@brunoc/ngx-viacep": "^2.1.2",
         "primeicons": "^2.0.0",
         "primeng": "^8.0.2",
         "rxjs": "~6.4.0",
